# libnative-example

./: .gitignore  README.md  clean.ps1  clean.sh
.github/workflows/: native.yaml
src/: Directory.Build.props
src/app/: Program.cs  app.csproj  nuget.config
src/interop/: LibNative.cs  interop.csproj
src/libnative/: CMakeLists.txt  build.ps1  build.sh  libnative.c  libnative.h
